# everyones-a-syndicate

./: Cargo.toml  Dockerfile  LICENSE.txt  README.md  index.html
src/: main.rs
