[package]
name = "rss-queen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
atom_syndication = { version = "0.12.5", features = ["serde"] }
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
either = { version = "1.13.0", features = ["serde"] }
moka = { version = "0.12.8", features = ["future"] }
rand = "0.8.5"
reqwest = "0.12.9"
rss = { version = "2.0.11", features = ["with-serde"] }
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_repr = "0.1.19"
tokio = { version = "1.42.0", features = ["fs", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
url = { version = "2.5.4", features = ["serde"] }
